--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://arturkarbone.github.io
+url: http://ArturKarbone.github.io
 title: My Octopress Blog
 subtitle: A blogging framework for hackers.
 author: Your Name
